# Smart-Farm

./: README.md
burger_bridge/: CMakeLists.txt  package.xml
burger_bridge/src/: burger_bridge_node.cpp
camera_aruco/: CMakeLists.txt  package.xml
camera_aruco/src/: 1  camera_aruco_node.cpp  camera_aruco_node_0214.cpp  camera_aruco_node_0219.cpp  camera_aruco_node_0223.cpp  camera_aruco_node_0226.cpp  camera_aruco_node_0302.cpp  camera_aruco_node_backup.cpp
camera_aruco/src/install/: local_setup.sh  setup.sh
nav_qt/: CMakeLists.txt  package.xml  resources.qrc
nav_qt/maps/: map2.pgm  map2.yaml  map3.pgm  map3.yaml  map_front.pgm  map_front.yaml
nav_qt/src/: main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  rosnode.cpp  rosnode.h
omx_pick_place/: CMakeLists.txt  package.xml
omx_pick_place/launch/: pose_to_joint_execute_server.launch.py
omx_pick_place/src/: pose_to_joint_execute_server.cpp
omx_pick_place/srv/: PoseToJointExecute.srv
waffle_yolo/: package.xml  setup.cfg  setup.py
waffle_yolo/waffle_yolo/: yolo_node.py
